src/objects/Contestant__c.object
<CustomObject>
    <fields>
        <fullName>DNF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DNF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Driver</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Active Drivers can be contestants in a race.</errorMessage>
            <filterItems>
                <field>Driver__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Only Drivers who&apos;s status is active are permitted.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Driver__c</referenceTo>
        <relationshipLabel>Contestants</relationshipLabel>
        <relationshipName>Contestants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qualification1LapTime__c</fullName>
        <label>Qualification 1 Lap Time</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualification2LapTime__c</fullName>
        <label>Qualification 2 Lap Time</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qualification3LapTime__c</fullName>
        <label>Qualification 3 Lap Time</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <referenceTo>Race__c</referenceTo>
        <relationshipLabel>Contestants</relationshipLabel>
        <relationshipName>Contestants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contestant</label>
    <nameField>
        <displayFormat>CONTESTANT-{00000000}</displayFormat>
        <label>Contestant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contestants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>